# specter-extention

specterext-warden/: MANIFEST.in  setup.cfg
specterext-warden/src/kartik/specterext/warden/: __main__.py  config.py  newcontroller.py  service.py
specterext-warden/src/kartik/specterext/warden/homepage/: routes.py
specterext-warden/src/kartik/specterext/warden/login/: routes.py
