[metadata]
name = kartik_warden
version = 0.0.1
author = kartik choubisa
author_email = kartik.choubisa@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kartik/specterext-warden
project_urls =
    Bug Tracker = https://github.com/kartik/specterext-warden/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=true
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src